--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         android.defaultConfig.vectorDrawables.useSupportLibrary = true
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -35,6 +36,8 @@ dependencies {
 
     implementation "io.reactivex.rxjava2:rxjava:2.1.13"
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+
+    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
 
 //    testImplementation 'junit:junit:4.12'
 //    androidTestImplementation 'com.android.support.test:runner:1.0.2'
